--- a/src/RM-e.WebService/Web.config
+++ b/src/RM-e.WebService/Web.config
@@ -11,7 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <customErrors mode="Off"/>
+    <trust level="Full" />
+    <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -69,3 +71,4 @@
     </compilers>
   </system.codedom>
 </configuration>
+<!--ProjectGuid: C9AA51F3-6357-424D-9327-72B3EA3D2769-->
